# electric-vehicle

./: .gitignore  CMakeLists.txt  gen_gif_frames.py  telemetry.py
include/: constant.h  constants.h  oled_frames.h  periodic.h
include/hardware/: button_hw.h  imu_hw.h  motor_hw.h  oled_hw.h
include/math/: feedforward.h  pid_control.h  trapezoid_profile.h
libs/mp92plus/: CMakeLists.txt
libs/mp92plus/include/: mp92plus.h
libs/mpu_9250/: CMakeLists.txt  mpu9250.c
libs/pico-ssd1306/: ssd1306.h
simulation/: controller.py  physics.py  requirements.txt  sim_visual.py  simulation.py  vehicle.py  vehicle_params.py
src/: electric_vehicle.cpp  main.cpp  periodic.cpp
src/hardware/: button_hw.cpp  imu_hw.cpp  motor_hw.cpp  oled_hw.cpp
src/math/: trapezoid_profile.cpp
src/pico_lwip/: lwipopts.h
